--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.0.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^7.5.2",
     "headlessui": "^0.0.0",
